# orbios-console-prototype

./: .gitignore  README.md  algo_integration_comments.txt  dashboard.html  dashboard_config.yaml  dashboard_server.py  index.html  launch_v2.command  orbios_sim.py  panel.html  panel_config.json  panel_server.py  pyproject.toml  rework.txt  run.command  schema.py  status.md  tactical_map.html  todo.txt
algo_part/: main2  main2.c  payload.c
base_resources/: dashboard_config.yaml  dashboard_server.py  launch_dashboard.command  stop_dashboard.command
base_resources/simulator_idea/: panel.html  panel_config.json  server.py
pi_part/: orbios_sim.py  pyproject.toml  run_pi.command  schema.py
pi_part/algo_part/: input.csv  main2.c  payload.h
scripts/: stop_dashboard.command
src/server/: main.py  schema.py
src/web/: index.css  index.html  main.js
tests/: test_remote.py  test_simulation.py
v1_centralized/config/: satellite_config.json
v1_centralized/scripts/: launch_dashboard.command
v1_centralized/src/server/: main.py  satellite_engine.py
v1_centralized/src/web/: index.css  index.html  main.js
v1_centralized/tests/: test_server.py
workstation_part/: dashboard.html  dashboard_server.py  index.html  panel.html  panel_config.json  panel_server.py  run.command  schema.py  simulator.html  tactical_map.html
