[project]
name = "orbios-prototype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "numpy>=2.4.4",
    "psutil>=7.2.2",
    "pydantic>=2.13.3",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "skyfield>=1.54",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
